--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <section class="section one">
           <div class="img"></div>
-          <h1 class="header1">CLARUSWAY</h1>      
+          <h1 class="header1">
+           <p>Clarusway</p></h1>      
                <div class="sec-bottom">
             <h2>Full Stack Development</h2>
             <p><b>The Full Stack Web Development program</b>  we offer can lead any beginner through the process, or take intermediate to advanced-level professionals to the next level in their careers! The learning path starts with IT Framework for beginners and continues with Front-end and Back-end developer course modules. <b>A full-stack web developer</b>  is a programmer who has the basic knowledge for all layers of an application. Each layer is called a “stack”. Full stack web developers have the ability to design complete <b>web applications and websites which requires both front-end and back-end skills.</b>  They work on the database and debugging of web applications or websites. Are you ready to give your career a boost?</p>
@@ -51,6 +52,13 @@
 
                 From beginners to intermediate level students, our curated content will meet your unique needs. Our proven curriculum and experienced instructors take you through the process step by step. Each student is provided with a mentor for tutoring support and educational advice throughout the program. Your access to support 24/7 ensures success – our chat/call system differentiates our program. Clarusway provides quality IT training with reasonable prices to prepare individuals for next-generation jobs! From beginners to IT professionals, we offer cutting-edge programs used today by leading corporations.
             </p>
+          </div>
+  
+          </section>
+         
+          <section class="section five">
+            <div class="img"></div>
+           <h2 class="header1">Clarusway Team</h2>
           </div>
   
           </section>
