--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <section class="section two">
             <div class="img"></div>
-            <img src="./img/clarusway.png" alt=""> 
+            <img class="img2" src="./img/clarusway.png" alt=""> 
             <div class="sec-bottom">
               <h2>AWS Solution Architect & DevOps</h2>
               <p>The skills you learn in our <b>AWS and DevOps Learning Path</b>  will enhance your qualifications and open greater opportunities to significantly leverage your income as a much sought-after professional in the high-demand IT job market. The AWS and DevOps Learning Path has two main modules: increase your ability to deliver applications quickly by learning services on AWS and enhance your tech skills by learning DevOps tools.
