--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 
           <section class="section three">
             <div class="img"></div>
-           <h2 class="header1">Way To Reinvent Yourself</h2>
+           <h2 class="header1">
+             <p> Way To Reinvent Yourself
+           </p>
+          </h2>
             <div class="sec-bottom">
               <h2>Data Analytics & Machine Learning</h2>
               <p>Extract knowledge and insights from different data types, Use scientific methods, processes, algorithms, and systems in this interdisciplinary field and <b>get the essential skills expected from a data scientist.</b>  By this program, in addition to learn how to build complex quantitative algorithms and synthesize large amounts of information,<b>gain the leadership and communication skills </b> necessary to deliver measurable and tangible results to a variety of business stakeholders!
