--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <section class="section four">
             <div class="img"></div>
-           <h2 class="header1">Clarusway Team</h2>
+           <h2 class="header1"><p>Clarusway Team</p> </h2>
             <div class="sec-bottom">
               <h2>Why Clarusway</h2>
               <p>
@@ -61,7 +61,9 @@
          
           <section class="section five">
             <div class="img"></div>
-           <h2 class="header1">Clarusway Team</h2>
+           <h2 class="header1">
+            <p class="end">Clarusway Team </p>
+           </h2>
           </div>
   
           </section>
